[gd_scene load_steps=6 format=3 uid="uid://3bynxbfwy551"]

[ext_resource type="Script" uid="uid://ch1gc80gmlcsl" path="res://level.gd" id="1_f2txt"]
[ext_resource type="PackedScene" uid="uid://dxhjuxxh3b3x" path="res://boss_1.tscn" id="3_oi3di"]
[ext_resource type="Texture2D" uid="uid://cwnylkb2dm2ow" path="res://graphics/bg1.jpg" id="4_0b4ue"]
[ext_resource type="PackedScene" uid="uid://b80huxwe514gw" path="res://enemy1.tscn" id="5_f2txt"]
[ext_resource type="PackedScene" uid="uid://dgil2vxuj5wcv" path="res://player.tscn" id="6_1ainy"]

[node name="level" type="Node2D"]
script = ExtResource("1_f2txt")

[node name="boss1" parent="." instance=ExtResource("3_oi3di")]
position = Vector2(640, 250)

[node name="bg" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="bg"]
offset_left = -432.0
offset_top = -544.0
offset_right = 3408.0
offset_bottom = 1616.0
texture = ExtResource("4_0b4ue")

[node name="StartTimer" type="Timer" parent="."]

[node name="StartPos" type="Marker2D" parent="."]
position = Vector2(640, 650)

[node name="player" parent="." instance=ExtResource("6_1ainy")]
position = Vector2(640, 360)

[node name="enemy1" parent="." instance=ExtResource("5_f2txt")]

[node name="enemy2" parent="." instance=ExtResource("5_f2txt")]

[node name="enemy3" parent="." instance=ExtResource("5_f2txt")]

[node name="ShieldCooldownLabel" type="Label" parent="."]
offset_left = 320.0
offset_top = 500.0
offset_right = 420.0
offset_bottom = 600.0
theme_override_colors/font_color = Color(0, 1, 0, 1)

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="ShieldCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="CooldownRect" type="ColorRect" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0.313726)
z_index = 1
z_as_relative = false
offset_left = 360.0
offset_top = 640.0
offset_right = 400.0
offset_bottom = 680.0
rotation = 3.14159
color = Color(1, 1, 1, 0.705882)

[node name="CooldownLabel" type="Label" parent="UI"]
z_as_relative = false
offset_left = 320.0
offset_top = 600.0
offset_right = 360.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 28
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 320.0
offset_top = 560.0
offset_right = 360.0
offset_bottom = 583.0

[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_shield_timer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="timeout" from="ShieldCooldownTimer" to="." method="_on_shield_cooldown_timer_timeout"]
